--- a/express/blog/package.json
+++ b/express/blog/package.json
@@ -10,7 +10,9 @@
     "connect-mincer": "^1.0.0",
     "cookie-parser": "~1.3.3",
     "debug": "~2.0.0",
+    "ejs": "^2.0.7",
     "express": "~4.9.0",
+    "express-ejs-layouts": "^1.1.0",
     "hbs": "~2.7.0",
     "morgan": "~1.3.0",
     "serve-favicon": "~2.1.3"
