--- a/express/blog/package.json
+++ b/express/blog/package.json
@@ -15,6 +15,7 @@
     "hbs": "~2.7.0",
     "mongoose": "^3.8.21",
     "morgan": "~1.3.0",
-    "serve-favicon": "~2.1.3"
+    "serve-favicon": "~2.1.3",
+    "view-helpers": "^0.1.5"
   }
 }
