--- a/express/blog/package.json
+++ b/express/blog/package.json
@@ -9,9 +9,11 @@
     "body-parser": "~1.8.1",
     "connect-mincer": "^1.0.0",
     "cookie-parser": "~1.3.3",
+    "csrf": "^2.0.4",
     "debug": "~2.0.0",
     "ejs": "^2.0.7",
     "express": "~4.9.0",
+    "express-csrf-local": "^0.1.0",
     "hbs": "~2.7.0",
     "mongoose": "^3.8.21",
     "morgan": "~1.3.0",
